--- a/zigbee/docker-compose.yml
+++ b/zigbee/docker-compose.yml
@@ -19,13 +19,29 @@ services:
         logging:
             driver: "${LOGGING_DRIVER}"
 
-    # mqtt zigbee to mqtt loxone gateway
-    loxone_zigbee_gateway:
+    # zigbee2mqtt manager
+    zigbee2mqtt_manager:
+        build: zigbee2mqtt_manager
         network_mode: host
-        build: loxone_zigbee_gateway
         restart: always
         env_file:
             - ./config
+        environment:
+          SERVER_PORT: 8881
+        logging:
+            driver: "${LOGGING_DRIVER}"
+
+    # zigbee2mqtt to loxone bridge
+    zigbee2mqtt_loxone_bridge:
+        build: zigbee2mqtt_loxone_bridge
+        network_mode: host
+        restart: always
+        volumes:
+            - ./zigbee2mqtt_loxone_bridge/settings.json:/settings.json
+        env_file:
+            - ./config
+        environment:
+            SERVER_PORT: 8882
         logging:
             driver: "${LOGGING_DRIVER}"
 
