--- a/bridge/config.example
+++ b/bridge/config.example
@@ -25,3 +25,7 @@ LOXONE_UDP_PORT=4444
 
 # set to 1 if you want to see debug messages
 DEBUG=0
+
+# set to none to disable logging at all (sdcard write protection), or use local, syslog, journald or let it commented out for platform default
+# LOGGING_DRIVER=none
+
