--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -1,8 +1,8 @@
 FROM alpine
 
 RUN apk update && apk add mosquitto bash
-COPY run.sh /
+COPY entrypoint.sh /
 
 EXPOSE 1883 9001
 
-CMD [ "/bin/bash", "/run.sh" ]
+CMD [ "/bin/bash", "/entrypoint.sh" ]
