Enable zigbee2mqtt web interface on 8880

--- a/docker-compose-zigbee.yml
+++ b/docker-compose-zigbee.yml
@@ -17,6 +17,8 @@ services:
             - config
         logging:
             driver: "${LOGGING_DRIVER}"
+        ports:
+            - 8880:8080
 
     # zigbee2mqtt manager
     zigbee2mqtt_manager:
