--- a/zigbee/zigbee2loxone_bridge/exampleConfiguration.json
+++ b/zigbee/zigbee2loxone_bridge/exampleConfiguration.json
@@ -6,63 +6,40 @@
       "zigbeeDeviceName": "sock_repro_obyv",
       "l2zPayloadMappings": [
         {
-          "loxoneTopic": "zb/devel/test_zigbee_tlacitko_1/state",
-          "mappingFormula": "{ \"state\" : \"${payload?.active?.toUpperCase()}\" }"
+          "loxoneComponentName": "zb/devel/test_zigbee_tlacitko_1",
+          "mappingFormula": "{ \"state\" : \"${payload?.active?.toUpperCase()}\" }",
         }
       ],
       "z2lPayloadMappings": [
         {
-          "loxoneTopic": "zb/devel/test_zigbee_tlacitko_1/cmd",
+          "loxoneComponentName": "zb/devel/test_zigbee_tlacitko_1",
           "mappingFormula": "${payload?.state?.toLowerCase()}"
         }
       ]
     },
-
-
-    {
-      "enabled": false,
-      "zigbeeDeviceName": "sock_repro_obyv",
-      "l2zPayloadMappings": [
-        {
-          "loxoneTopic": "zb/devel/test_zigbee_out_3/state",
-          "mappingFormula": "{ \"state\" : \"${payload?.value?.toUpperCase()}\" }"
-        }
-      ]
-    },
-
-    {
-      "enabled": false,
-      "zigbeeDeviceName": "sock_repro_obyv",
-      "l2zPayloadMappings": [
-        {
-          "loxoneTopic": "zb/devel/test_zigbee_out_2/state",
-          "mappingFormula": "{ \"state\" : \"${payload.value as Float > 0.0 ? 'on' : 'off'}\" }"
-        }
-      ]
-    },
-
 
     {
       "enabled": true,
       "zigbeeDeviceName": "aquara_1",
       "z2lPayloadMappings": [
         {
-          "loxoneTopic": "zb/devel/test_zigbee_temperature/cmd",
+          "loxoneComponentName": "zb/devel/test_zigbee_temperature",
           "mappingFormula": "${payload.temperature}"
         },
         {
-          "loxoneTopic": "zb/devel/test_zigbee_humidity/cmd",
+          "loxoneComponentName": "zb/devel/test_zigbee_humidity",
           "mappingFormula": "${payload.humidity}"
         }
       ]
     },
+
     {
       "enabled": true,
       "zigbeeDeviceName": "bulb_1",
       "l2zPayloadMappings": [
         {
-          "loxoneTopic": "zb/devel/devel/state",
-          "mappingFormula": "{ \"brightness\" : \"${payload.value}\" }"
+          "loxoneComponentName": "zb/devel/devel",
+          "mappingFormula": "{ \"brightness\" : \"${payload.value}\" }",
         }
       ]
     }
