--- a/zigbee/zigbee2loxone_bridge/examples/exampleConfiguration.json
+++ b/zigbee/zigbee2loxone_bridge/examples/exampleConfiguration.json
@@ -3,11 +3,11 @@
 
     {
       "enabled": true,
-      "zigbeeDeviceName": "sock_repro_obyv",
+      "zigbeeDeviceName": "socket_2",
       "l2zPayloadMappings": [
         {
           "loxoneComponentName": "zb/devel/test_zigbee_tlacitko_1",
-          "mappingFormula": "{ \"state\" : \"${payload?.active?.toUpperCase()}\" }",
+          "mappingFormula": "{ \"state\" : \"${payload?.active?.toUpperCase()}\" }"
         }
       ],
       "z2lPayloadMappings": [
@@ -39,7 +39,7 @@
       "l2zPayloadMappings": [
         {
           "loxoneComponentName": "zb/devel/devel",
-          "mappingFormula": "{ \"brightness\" : \"${payload.value}\" }",
+          "mappingFormula": "{ \"brightness\" : \"${payload.value}\" }"
         }
       ]
     }
