--- a/zigbee/zigbee2loxone_bridge/mapper/exampleConfiguration.json
+++ b/zigbee/zigbee2loxone_bridge/mapper/exampleConfiguration.json
@@ -4,16 +4,14 @@
     {
       "enabled": true,
       "zigbeeDeviceName": "socket_2",
-      "l2zPayloadMappings": [
+      "payloadMapping": [
         {
           "loxoneComponentName": "zb/devel/test_zigbee_tlacitko_1",
-          "mappingFormula": "{ \"state\" : \"${payload?.active?.toUpperCase()}\" }"
-        }
-      ],
-      "z2lPayloadMappings": [
-        {
-          "loxoneComponentName": "zb/devel/test_zigbee_tlacitko_1",
-          "mappingFormula": "${payload?.state?.toLowerCase()}"
+          "loxoneAttributeName": "active",
+          "zigbeeAttributeName": "state",
+          "mappingFormulaL2Z": "${value?.toUpperCase()}",
+          "mappingFormulaZ2L": "${value?.toLowerCase()}"
+
         }
       ]
     },
@@ -21,14 +19,14 @@
     {
       "enabled": true,
       "zigbeeDeviceName": "aquara_1",
-      "z2lPayloadMappings": [
+      "payloadMapping": [
         {
           "loxoneComponentName": "zb/devel/test_zigbee_temperature",
-          "mappingFormula": "${payload.temperature}"
+          "zigbeeAttributeName": "temperature"
         },
         {
           "loxoneComponentName": "zb/devel/test_zigbee_humidity",
-          "mappingFormula": "${payload.humidity}"
+          "zigbeeAttributeName": "humidity"
         }
       ]
     },
@@ -36,12 +34,13 @@
     {
       "enabled": true,
       "zigbeeDeviceName": "bulb_1",
-      "l2zPayloadMappings": [
+      "payloadMapping": [
         {
           "loxoneComponentName": "zb/devel/devel",
-          "mappingFormula": "{ \"brightness\" : \"${payload.value}\" }"
+          "zigbeeAttributeName": "brightness"
         }
       ]
     }
+
   ]
 }
