playing with loxone 2 mqtt to homeassistant, work in progress

--- a/docker-compose-bridge.yml
+++ b/docker-compose-bridge.yml
@@ -4,7 +4,7 @@ services:
 
   # loxone -> mqtt uses loxone web interface to get value changes
   loxone2mqtt:
-    build: bridge/loxone2mqtt
+    build: bridge/loxone2mqtt_gen1
     restart: unless-stopped
     env_file:
       - config
